--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,17 @@ version = "0.1.0"
 edition = "2021"
 
 
+[lib]
+path = "crates/codora/lib.rs"
+
+[[bin]]
+name = "codora"
+path = "crates/codora/main.rs"
+
+
 [features]
 default = ["new"]
+web = ["new", "validator"]
 new = []
 axum = []
 validator = []
@@ -13,16 +22,15 @@ validator = []
 [dependencies]
 serde = { workspace = true }
 tower-layer = "0.3.3"
-anyhow.workspace = true
-tokio = { version = "1.44.0", features = ["full"] }
+anyhow = { workspace = true }
 derive-new = "0.7.0"
 
 [dev-dependencies]
-tokio = { version = "1.44.0", features = ["full"] }
+tokio = { workspace = true, features = ["full"] }
 
 
 [workspace]
-members = [".", "crates/*"]
+members = [".", "crates/codora-axum", "crates/codora-validator", "dev"]
 resolver = "2"
 
 
@@ -30,14 +38,31 @@ resolver = "2"
 
 [workspace.package]
 version = "0.8.3"
-license = "MIT OR Apache-2.0"
+license = "MIT"
 edition = "2021"
 repository = "https://github.com/getcodora/codora"
 # TODO Add other important keyword!
-keywords = ["authentication", "authorization", "codora"]
-categories = ["web-programming", "security", "authentication", "authorization"]
+keywords = [
+    "web",
+    "server",
+    "ui",
+    "web framework",
+    "orm",
+    "authentication",
+    "server function",
+    "server action",
+    "security",
+    "logging",
+]
+categories = ["web-programming", "web-framework", "orm"]
 authors = ["West Sheriff <west.sh.mail@gmail.com>"]
 
 [workspace.dependencies]
 anyhow = "1.0.87"
 serde = "1.0.215"
+tokio = { version = "1.44.0" }
+axum = "0.8.1"
+
+
+# TODO
+# Setup Compiler Profile
