--- a/crates/codora-axum/Cargo.toml
+++ b/crates/codora-axum/Cargo.toml
@@ -8,8 +8,8 @@ edition = "2021"
 workspace = true
 
 [dependencies]
-axum = "0.8.1"
-tokio = { version = "1.43.0", features = ["full"] }
+axum = { workspace = true }
+tokio = { workspace = true, features = ["full"] }
 axum-extra = { version = "0.10.0", features = ["typed-routing"] }
 validator = { version = "0.20.0", features = ["derive"] }
 codora = { version = "0.1.0", path = "../.." }
