--- a/package.json
+++ b/package.json
@@ -2,11 +2,20 @@
   "name": "codora",
   "module": "index.ts",
   "type": "module",
+  "bin": "packages/codora/dist/index.js",
+  "scripts": {
+    "test": "vitest"
+  },
   "workspaces": [
     "packages/*"
   ],
   "devDependencies": {
-    "@types/bun": "latest"
+    "@eslint/js": "^9.22.0",
+    "@types/bun": "latest",
+    "eslint": "^9.22.0",
+    "globals": "^16.0.0",
+    "typescript-eslint": "^8.27.0",
+    "vitest": "^3.0.9"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
